examples/test/testpolicy14778.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14778
  namespace: namespace332
spec:
  podSelector:
    matchLabels:
      key30: value29
      key8: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value25
          key32: value25
          key29: value0
      podSelector:
        matchLabels:
          key19: value19
          key6: value9
          key8: value9
